# visual_foresight

./: CMakeLists.txt  README.md  package.xml  setup.py
data_collection/baxter/3_View/: hparams.py
data_collection/baxter/head_cam/: hparams.py
data_collection/sawyer/five_view/: collection_params_dict.json  hparams.py  hparams_eps.py
data_collection/sawyer/goal_images/: hparams.py
data_collection/sawyer/hard_object_data/: hparams.py
data_collection/sawyer/multi_env/: hparams.py
data_collection/sawyer/towel_data/: get_examples.py  hparams.py
data_collection/sim/sawyer_grasp/: hparams.py
data_collection/widowx/: hparams.py
examples/: dataset_reader.py
experiments/hvf/: conf.py  hparams.py
experiments/sawyer/human_cem/: conf.py  hparams.py
experiments/sawyer/mixed_objects/: conf.py  hparams_deformable_objects.py  hparams_hardobjects.py
experiments/sawyer/pixel_cost/: hparams.py
experiments/sawyer/registration_experiments/: conf.py  gdnconf.py  hparams.py
experiments/sawyer/towel_classifier/: conf.py  hparams.py
experiments/sim/ensemble_grasping/: conf.py  generate_tasks.py  hparams.py
visual_foresight/agent/: benchmarking_agent.py  general_agent.py
visual_foresight/agent/utils/: traj_saver.py
visual_foresight/envs/mujoco_env/: base_mujoco_env.py
visual_foresight/envs/robot_envs/: autograsp_env.py  base_env.py  file2hdf5.py  (+1 more)
visual_foresight/sim/: benchmarks.py  run.py
visual_foresight/utils/: check_dataset.py  file_2_hdf5.py  file_2_record.py  summarize_dataset.py
visual_foresight/video_prediction/: setup_predictor.py
(+44 files in other folders)
